--- a/doc/qumesh_installation.tex
+++ b/doc/qumesh_installation.tex
@@ -4,6 +4,7 @@
 
 \newcommand{\menuarrow}{$\rightarrow$}
 \newcommand{\qumesh}{qgis\_umesh\xspace}
+\newcommand{\plotcfts}{PlotCFTS\xspace}
 \newcommand\Cpp{C\nolinebreak[4]\hspace{-.05em}\raisebox{.25ex}{{\textbf{++}}}\xspace}
 \newcommand{\netcdf}{netCDF\xspace}
 
@@ -17,42 +18,50 @@
 \memoFrom{Jan Mooiman}
 \memoTelephone{+31\,(0)88\,335\,8568}
 \memoEmail{jan.mooiman@deltares nl}
-\memoSubject{Installation of the \qumesh plugin in QGIS 3.8 on a Windows 10 PC.}
+\memoSubject{Installation of the \qumesh plugin in QGIS 3.10 on a Windows 10 PC.}
 \memoCopy{---}
 
 \deltarestitle
 
-{{\footnotesize
-	{\textbf{Version control information}}
-	
-	\begin{tabular}{@{}p{12,5mm}@{}p{0mm}p{\textwidth-27mm-24pt}}
-		\textbf{Location} & \textbf{:} & \url{\svnkw{HeadURL}} \\
-		\textbf{Revision} & \textbf{:} & \svnrev 
-	\end{tabular}
-}}
-
-
-\tableofcontents
+%{{\footnotesize
+%	{\textbf{Version control information}}
+%	
+%	\begin{tabular}{@{}p{12,5mm}@{}p{0mm}p{\textwidth-27mm-24pt}}
+%		\textbf{Location} & \textbf{:} & \url{\svnkw{HeadURL}} \\
+%		\textbf{Revision} & \textbf{:} & \svnrev 
+%	\end{tabular}
+%}}
 
 %--------------------------------------------------------------------------------
 \section{Installation}
 
-Copy the \qumesh-dll to the \Cpp plugin directory of QGIS. 
-In my development installation it is:\newline
-\dir{c:\textbackslash OSGeo4W64\textbackslash apps\textbackslash qgis\textbackslash plugins\textbackslash qgis\_umesh.dll}
+\begin{action}
+\item Copy the \qumesh.dll to the \Cpp plugin directory of QGIS. 
+In my development installation it is:
+\dir{c:\textbackslash OSGeo4W64\textbackslash apps\textbackslash qgis\textbackslash plugins\textbackslash qgis\_umesh.dll}.
 
-The \qumesh.dll need the following dll's, so they should be in the \%PATH\%-environment variable:
+\item Install the icons on the program files directory \dir{c:\textbackslash Program Files\textbackslash Deltares\textbackslash qgis\_umesh\textbackslash icons}
+\begin{itemize}
+    \item file\_open.png
+    \item map\_output.png
+    \item plotcfts.png
+    \item remote\_olv.png
+\end{itemize}
+\item Install the program \plotcfts on the program files directory \dir{c:\textbackslash Program Files\textbackslash Deltares\textbackslash plotcfts}
+
+\item The \qumesh.dll need the following dll's, so they should be in the \%PATH\%-environment variable:
 \begin{itemize}
     \item qt5core.dll
     \item qt5gui.dll
     \item qt5widgets.dll
 \end{itemize}
-Next dll's are probably already placed in the \%PATH\%-environment variable when installing QGIS:
+
+\item Next dll's are probably already placed in the \%PATH\%-environment variable when installing QGIS:
 \begin{itemize} 
     \item qgis\_core.dll
     \item qgis\_gui.dll
 \end{itemize} 
-
+\end{action}
 %--------------------------------------------------------------------------------
 
 \end{document}
