Installation text updated

--- a/doc/qumesh_installation.tex
+++ b/doc/qumesh_installation.tex
@@ -48,7 +48,10 @@ In my development installation it is:
     \item remote\_olv.png
 \end{itemize}
 \item Install the program \plotcfts on the program files directory \dir{c:\textbackslash Program Files\textbackslash Deltares\textbackslash plotcfts}
+\end{action}
 
+\paragraph*{Some notes}
+\begin{itemize}
 \item The \qumesh.dll need the following dll's, so they should be in the \%PATH\%-environment variable:
 \begin{itemize}
     \item qt5core.dll
@@ -61,7 +64,7 @@ In my development installation it is:
     \item qgis\_core.dll
     \item qgis\_gui.dll
 \end{itemize} 
-\end{action}
+\end{itemize}
 %--------------------------------------------------------------------------------
 
 \end{document}
