Branch to secure the experiments

--- a/doc/qumesh_installation.tex
+++ b/doc/qumesh_installation.tex
@@ -13,6 +13,7 @@
 
 \begin{document}
 \memoTo{To whom it may concern}
+\memoConfidentialUntil{}
 \memoDate{\today}
 \memoVersion{001}
 \memoFrom{Jan Mooiman}
@@ -34,7 +35,7 @@
 
 %--------------------------------------------------------------------------------
 \section{Installation}
-
+\phantom{mooiman}\vspace{-\baselineskip}
 \begin{action}
 \item Copy the \qumesh.dll to the \Cpp plugin directory of QGIS. 
 In my development installation it is:
@@ -51,6 +52,7 @@ In my development installation it is:
 \end{action}
 
 \paragraph*{Some notes}
+\phantom{mooiman}\vspace{-\baselineskip}
 \begin{itemize}
 \item The \qumesh.dll need the following dll's, so they should be in the \%PATH\%-environment variable:
 \begin{itemize}
