GitHUB address added to programmers guide

--- a/doc/qumesh_installation.tex
+++ b/doc/qumesh_installation.tex
@@ -34,6 +34,7 @@
 %}}
 
 %--------------------------------------------------------------------------------
+
 \section{Installation}
 \phantom{mooiman}\vspace{-\baselineskip}
 \begin{action}
@@ -68,5 +69,10 @@ In my development installation it is:
 \end{itemize} 
 \end{itemize}
 %--------------------------------------------------------------------------------
-
+\section{Source}
+The source code is available on GitHUB:
+\begin{Verbatim}
+https://github.com/Deltares/qgis_umesh
+\end{Verbatim}
+%--------------------------------------------------------------------------------
 \end{document}
