Update QGIS_UMESH user manual

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -171,9 +171,8 @@ Shows the about box.
 %------------------------------------------------------------------------------
 \section{Source}
 The source code is available on GitHUB:
-\begin{Verbatim}
-https://github.com/Deltares/qgis_umesh
-\end{Verbatim}
+
+\url{https://github.com/Deltares/qgis_umesh}
 %------------------------------------------------------------------------------
 
 \end{document}
