Update QGIS_UMESH user manual, scalar and vector field pictures added

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -174,19 +174,37 @@ Shows the about box.
 %------------------------------------------------------------------------------
 \section{QGIS panels}
 Some \qgis panels are shown after reading a \netcdf map-file.
+%------------------------------------------------------------------------------
 \subsection{Layer panel}
 \begin{figure}[H]
 	\centering    
 	\includegraphics[width=0.4\textwidth]{pictures/panel_layers.png}
 	\caption{The \qgis layer panel after reading a \netcdf map-file.\label{fig:panel_layer}}
 \end{figure}
+%------------------------------------------------------------------------------
 \subsection{Log messages panel}
 \begin{figure}[H]
 	\centering    
-	\includegraphics[width=0.9\textwidth]{pictures/panel_log_message.png}
-	\caption{The \qgis layer panel after reading a \netcdf map-file.\label{fig:panel_layer})}
-	\end{figure}
-
+	\includegraphics[width=0.95\textwidth]{pictures/panel_log_message.png}
+	\caption{The \qgis layer panel after reading a \netcdf map-file.\label{fig:panel_layer}}
+\end{figure}
+%------------------------------------------------------------------------------
+\section{Examples figures}
+Examples are given for a scalar field (Depth averaged velocity magnitude) and the corresponding vector field.
+%------------------------------------------------------------------------------
+\subsection{Example scalar field}
+\begin{figure}[H]
+	\centering    
+	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_scalar.png}
+	\caption{Depth averaged velocity, magnitude.\label{fig:velocity_magnitude}}
+\end{figure}
+%------------------------------------------------------------------------------
+\subsection{Example vector field}
+\begin{figure}[H]
+	\centering    
+	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_vector.png}
+	\caption{Depth averaged velocity, vector.\label{fig:velocity_vector}}
+\end{figure}
 %------------------------------------------------------------------------------
 \section{Source}
 The source code is available on GitHUB:
