--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -190,20 +190,32 @@ Some \qgis panels are shown after reading a \netcdf map-file.
 \end{figure}
 %------------------------------------------------------------------------------
 \section{Examples figures}
-Examples are given for a scalar field (Depth averaged velocity magnitude) and the corresponding vector field.
+Examples are given for a scalar field (Depth averaged velocity magnitude) and the corresponding vector field (arrow and direction).
 %------------------------------------------------------------------------------
 \subsection{Example scalar field}
+These fields are given on the output files of \dflowfm.
 \begin{figure}[H]
 	\centering    
-	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_scalar.png}
+	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_velocity_magnitude.png}
 	\caption{Depth averaged velocity, magnitude.\label{fig:velocity_magnitude}}
 \end{figure}
 %------------------------------------------------------------------------------
 \subsection{Example vector field}
+These fields are not given on the output files of \dflowfm.
+So the postprocessing program (\qumesh) need to compute the quantities of the vector field, like vector arrows and vector direction. 
+
+\Note the "velocity magnitude" is given on the output file of \dflowfm and thus computed by \dflowfm.
+The quantity "velocity magnitude" is therefor available in the tab \menu{Scalar}
 \begin{figure}[H]
 	\centering    
-	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_vector.png}
+	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_velocity_arrow.png}
 	\caption{Depth averaged velocity, vector.\label{fig:velocity_vector}}
+\end{figure}
+
+\begin{figure}[H]
+	\centering    
+	\includegraphics[width=0.95\textwidth]{pictures/oosterschelde_velocity_direction.png}
+	\caption{Depth averaged velocity, direction.\label{fig:velocity_vector_direction}}
 \end{figure}
 %------------------------------------------------------------------------------
 \section{Source}
