First implementation of morphology results. Fmplementation of DataValuesProvider4D. Remove map_time_manager_window when removing top-level layer (layerTreeRoot). Function to rearrange an array to the required dimension order for qgis_umesh, D-Flow FM is not consistent in defining the dimension order (ex. 4d arrays lyrfrac and msed).

--- a/doc/qgis_umesh_installation.tex
+++ b/doc/qgis_umesh_installation.tex
@@ -18,7 +18,7 @@
 \memoTelephone{+31\,(0)88\,335\,8568}
 \memoEmail{jan.mooiman@deltares nl}
 \memoSubject{Installation of the \qumesh plugin in QGIS 3.12 on a Windows 10 PC.}
-\memoCopy{---}
+\memoCopy{}
 
 \deltarestitle
 
