Initialisation of time_series-vector implemented

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -40,6 +40,7 @@
 \endfoot 
 \bottomline 
 \endlastfoot 
+0.11.00  &  - Reading \file{$\ast$\_net.nc} file repaired.  \\
 0.10.00  &  - Export to QGIS layer enabled for scalar quantities.  \\
 0.00.00  &  - No information available.  \\
 \end{longtable} 
