Update user manual

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -136,13 +136,14 @@ When selecting this option some settings for the presentation of the variables v
 This window will also pop up when using the right mouse button within the window \window{Map Output Animation}.
 \begin{figure}[H]
 	\centering    
-	\includegraphics[width=0.50\textwidth]{pictures/map_properties.png}
+	\includegraphics[width=0.50\textwidth]{pictures/map_output_settings.png}
 	\caption{Window \window{Map Output Settings}\label{fig:map_output_settings}}
 \end{figure}
 The following quantities can be specified in the window presented by \autoref{fig:map_output_settings}:
 \begin{longtable}{p{35mm-12pt} p{\textwidth-35mm-12pt}} 
-	Transparency & Specify the transparency of the iso patches for the scalars. \\
 	Refresh rate & Specify the refresh rate, in seconds, of the images during animation. \\	
+	\textbf{Transparency} & \\
+	Transparency & Specify the transparency of the iso patches for the scalars by a integer number [\%] or by the slider, the range of the permitted values is: 0 - 100 [\%]. \\
 	\textbf{Colorramp limits} & \\
 	\textsl{Dynamic colorramp} & \\
 	\underline{checked} & Colorramp limits are determined by the minimum and maximum value of the scalar. 
