Set opacity for data at faces by the ramp colors

--- a/doc/qgis_umesh_installation.tex
+++ b/doc/qgis_umesh_installation.tex
@@ -17,7 +17,7 @@
 \memoFrom{Jan Mooiman}
 \memoTelephone{+31\,(0)88\,335\,8568}
 \memoEmail{jan.mooiman@deltares nl}
-\memoSubject{Installation of the \qumesh plugin in QGIS 3.12 on a Windows 10 PC.}
+\memoSubject{Installation of the \qumesh plugin in QGIS 3.12 etc.\ on a Windows 10 PC.}
 \memoCopy{}
 
 \deltarestitle
@@ -42,6 +42,7 @@ In my development installation it is:
     \item map\_output.png
     \item plotcfts.png
     \item remote\_olv.png
+    \item \ldots
 \end{itemize}
 \item Install the program \plotcfts on the program files directory \dir{c:\textbackslash Program Files\textbackslash Deltares\textbackslash plotcfts}
 \end{action}
