Pressing cancel button in QColorDialog is handled correctly. Update documentation.

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -40,6 +40,7 @@
 \endfoot 
 \bottomline 
 \endlastfoot 
+0.12.00  &  - Opacity can be set by color ramp slider.  \\
 0.11.00  &  - Reading \file{$\ast$\_net.nc} file repaired.  \\
 0.10.00  &  - Export to QGIS layer enabled for scalar quantities.  \\
 0.00.00  &  - No information available.  \\
@@ -142,8 +143,8 @@ This window will also pop up when using the right mouse button within the window
 The following quantities can be specified in the window presented by \autoref{fig:map_output_settings}:
 \begin{longtable}{p{35mm-12pt} p{\textwidth-35mm-12pt}} 
 	Refresh rate & Specify the refresh rate, in seconds, of the images during animation. \\	
-	\textbf{Transparency} & \\
-	Transparency & Specify the transparency of the iso patches for the scalars by a integer number [\%] or by the slider, the range of the permitted values is: 0 - 100 [\%]. \\
+	\textbf{Opacity} & \\
+	Opacity & Specify the opacity of the iso patches for the scalars by a integer number [\%] or by the slider, the range of the permitted values is: 0 - 100 [\%]. Zero means fully transparent.\\
 	\textbf{Colorramp limits} & \\
 	\textsl{Dynamic colorramp} & \\
 	\underline{checked} & Colorramp limits are determined by the minimum and maximum value of the scalar. 
