Showing 1D and 2D results at the same time if they are in one map-file. Drawing 1D2D contact mesh

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -28,7 +28,7 @@
 \phantom{m}\vspace{-\baselineskip}
 %
 %--- begin light blue table ---
-\begin{longtable}{p{16mm-12pt}|p{\textwidth-16mm-12pt}} 
+\begin{longtable}{p{17mm-12pt}|p{\textwidth-17mm-12pt}} 
 %\caption{Light blue theme of table} \\% 
 \rowcolor{dblue1} 
 \textbf{Release} 
@@ -40,6 +40,8 @@
 \endfoot 
 \bottomline 
 \endlastfoot 
+0.13.00  &  - Showing 1D and 2D results at the same time if they are in one map-file.  \\
+		 &  - Drawing 1D2D contact mesh \\
 0.12.00  &  - Opacity can be set by color ramp slider.  \\
 0.11.00  &  - Reading \file{$\ast$\_net.nc} file repaired.  \\
 0.10.00  &  - Export to QGIS layer enabled for scalar quantities.  \\
