Improved perfomrance because there is no debug information maore in the release version

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -40,6 +40,7 @@
 \endfoot 
 \bottomline 
 \endlastfoot 
+0.14.00  &  - Improved performance, no debug information anymore in release mode  \\
 0.13.00  &  - Showing 1D and 2D results at the same time if they are in one map-file.  \\
 		 &  - Drawing 1D2D contact mesh \\
 0.12.00  &  - Opacity can be set by color ramp slider.  \\
