Transfer 3D layer data to QGIS vector layer. Skipping the missing value data. Performance improvement when creating the QGIS vector layers

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -40,6 +40,7 @@
 \endfoot
 \bottomline
 \endlastfoot
+0.17.00  &  - Transfer 3D layer data to QGIS vector layer.  \\
 0.16.00  &  - The unit after selection text of combobox for scalar in \window{Map Output Animation} window added.  \\
 0.15.00  &  - Set support point value(s) of colorramp in \window{Map Output Animation} window.  \\
 0.14.00  &  - Improved performance, no debug information anymore in release mode  \\
