--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -40,6 +40,7 @@
 \endfoot
 \bottomline
 \endlastfoot
+0.19.00  &  - Using the spinbox for layers will invalidate (uncheck) the view of a layer.\\
 0.18.00  &  - Determine the mesh 1D edge length after all variables are read.  Other wise sometime a crash will appear.\\
 0.17.00  &  - Transfer 3D layer data to QGIS vector layer.  \\
 0.16.00  &  - The unit after selection text of combobox for scalar in \window{Map Output Animation} window added.  \\
